feat: refactor documentdb-poc